realize el html del header

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi proyecto nuevo</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    
+    <header><h2>Servicios</h2>
+    <h1>¿Qué ofrecemos?</h1>
+    <p>Con experiencia en viajes por más de 30 años, podemos ofrecerle una solucions de viaje completo</p>
+    </header>
+    <main>
+        <section></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
