--- a/index.html
+++ b/index.html
@@ -7,45 +7,47 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-
+  <div class="containerAuxiliar">
     <header>
-    <h2>Servicios</h2>
-    <h1>¿Qué ofrecemos?</h1>
-    <p>Con experiencia en viajes por más de 30 años, podemos ofrecerle una solucions de viaje completo</p>
-    </header>
-    <main class="contenido">
-        <section class="servicio-item item1"> 
-            <img src="" alt="">
-            <h3>Emisión de boletos aéreos</h3>
-            <p> Reservamos todos los vuelos nacionales e internacionales con los mejores precios y descuentos.</p>
-        </section>
-        <section class="servicio-item item2">
-            <img src="" alt="">
-            <h3>Procesamiento de Visa</h3>
-            <p> Podemos brindarle la mejor consultoria para conseguirle la visa que desea.</p>
-        </section>
-        <section class="servicio-item item3">
-            <img src="" alt="">
-            <h3>Hajj & Umrah</h3>
-            <p> Somos el mayor proveedor certificado de paquetes de Hajj para peregrinos en todo Bangladesh.</p>
-        </section>
-        <section class="servicio-item item4">
-            <img src="" alt="">
-            <h3>Planificación del recorrido</h3>
-            <p> Elija entre nuestros miles de paquetes turísticos, el que más se adapte a ti y a tu familia.</p>
-        </section>
-        <section class="servicio-item item5">
-            <img src="" alt="">
-            <h3>Reclutamiento</h3>
-            <p> Podemos brindarle la mejor consultoría para  conseguirle la visa que desea.</p>
-        </section>
-        <section class="servicio-item item6">
-            <img src="" alt="">
-            <h3>Consultoría</h3>
-            <p> Brindamos  consultoría para todas sus necesidades de viaje. Nuestros expertos en viajes pueden ayudarle las 24 horas al día, los 7 días de la semana.</p>
-        </section>
-    </main>
-    <footer></footer>
+        <h2>Servicios</h2>
+        <h1>¿Qué ofrecemos?</h1>
+        <p>Con experiencia en viajes por más de 30 años, podemos ofrecerle una solucions de viaje completo</p>
+        </header>
+        <main class="contenido">
+            <section class="servicio-item item1"> 
+                <img src="" alt="">
+                <h3>Emisión de boletos aéreos</h3>
+                <p> Reservamos todos los vuelos nacionales e internacionales con los mejores precios y descuentos.</p>
+            </section>
+            <section class="servicio-item item2">
+                <img src="" alt="">
+                <h3>Procesamiento de Visa</h3>
+                <p> Podemos brindarle la mejor consultoria para conseguirle la visa que desea.</p>
+            </section>
+            <section class="servicio-item item3">
+                <img src="" alt="">
+                <h3>Hajj & Umrah</h3>
+                <p> Somos el mayor proveedor certificado de paquetes de Hajj para peregrinos en todo Bangladesh.</p>
+            </section>
+            <section class="servicio-item item4">
+                <img src="" alt="">
+                <h3>Planificación del recorrido</h3>
+                <p> Elija entre nuestros miles de paquetes turísticos, el que más se adapte a ti y a tu familia.</p>
+            </section>
+            <section class="servicio-item item5">
+                <img src="" alt="">
+                <h3>Reclutamiento</h3>
+                <p> Podemos brindarle la mejor consultoría para  conseguirle la visa que desea.</p>
+            </section>
+            <section class="servicio-item item6">
+                <img src="" alt="">
+                <h3>Consultoría</h3>
+                <p> Brindamos  consultoría para todas sus necesidades de viaje. Nuestros expertos en viajes pueden ayudarle las 24 horas al día, los 7 días de la semana.</p>
+            </section>
+        </main>
+
+  </div>
+    
 </body>
 </html>
 
