agregue las imagenes

--- a/index.html
+++ b/index.html
@@ -15,32 +15,32 @@
         </header>
         <main class="contenido">
             <section class="servicio-item item1"> 
-                <img src="" alt="">
+                <img src="img/plane.png" alt="img-avion">
                 <h3>Emisión de boletos aéreos</h3>
                 <p> Reservamos todos los vuelos nacionales e internacionales con los mejores precios y descuentos.</p>
             </section>
             <section class="servicio-item item2">
-                <img src="" alt="">
+                <img src="img/visa.png" alt="img-visa">
                 <h3>Procesamiento de Visa</h3>
                 <p> Podemos brindarle la mejor consultoria para conseguirle la visa que desea.</p>
             </section>
             <section class="servicio-item item3">
-                <img src="" alt="">
+                <img src="img/hajj.png" alt="img-hajj">
                 <h3>Hajj & Umrah</h3>
                 <p> Somos el mayor proveedor certificado de paquetes de Hajj para peregrinos en todo Bangladesh.</p>
             </section>
             <section class="servicio-item item4">
-                <img src="" alt="">
+                <img src="img/tour.png" alt="img-recorrido">
                 <h3>Planificación del recorrido</h3>
                 <p> Elija entre nuestros miles de paquetes turísticos, el que más se adapte a ti y a tu familia.</p>
             </section>
             <section class="servicio-item item5">
-                <img src="" alt="">
+                <img src="img/recruiting.png" alt="img-reclut">
                 <h3>Reclutamiento</h3>
                 <p> Podemos brindarle la mejor consultoría para  conseguirle la visa que desea.</p>
             </section>
             <section class="servicio-item item6">
-                <img src="" alt="">
+                <img src="img/consultancy.png" alt="img-consul">
                 <h3>Consultoría</h3>
                 <p> Brindamos  consultoría para todas sus necesidades de viaje. Nuestros expertos en viajes pueden ayudarle las 24 horas al día, los 7 días de la semana.</p>
             </section>
